# proofana-chicago

./: .gitignore  Makefile  README.MissingBinaryFiles  core.patch  index.html
core/: AnaConfig.cxx  AnaConfig.h  AnalysisBase.cxx  AnalysisBase.h  AnalysisChain.cxx  AnalysisChain.h  Aux.cxx  Aux.h  Error.cxx  Error.h  Event.cxx  Event.h  EventBuilderBase.cxx  EventBuilderBase.h  Key.cxx  Key.h  MomentObj.cxx  MomentObj.h  Particle.h  Point.h  ProofAna.cxx  ProofAna.h  SelectorBase.cxx  SelectorBase.h  TDirCache.cxx  TDirCache.h  Timer.cxx  Timer.h
docs/: config.txt  event.txt
eventbuilders/: EventBuilder_SMWZ.cxx  EventBuilder_SMWZ.h
helpers/: EWKSelection.cxx  EWKSelection.h  HistogramBlock.cxx  HistogramBlock.h  efficiency.h
lib/: LinkDef.h
run/: merge.sh
scripts/: RootCore_clean.sh  RootCore_compile.sh  RootCore_relink.sh  checkDatasets.sh  (+38 more)
utils/RootCore/: Makefile-common.in  Makefile-single.in  all_packages  configure  configure.in
utils/RootCore/PROOF-INF/: BUILD.sh  SETUP.C
utils/RootCore/PROOF-INF-LITE/: BUILD.sh  SETUP.C
utils/RootCore/scripts/: build.sh  checkout.sh  clean.sh  compile.sh  find_packages.sh  get_cxxflags.sh  get_dependency.sh  get_field.sh  get_ldflags.sh  get_location.sh  grid_compile.sh  grid_compile_config.sh  grid_copy.sh  grid_run_config.sh  grid_run_nobuild.sh  grid_submit.sh  grid_submit_any.sh  grid_submit_nobuild.sh  grid_test.sh  link_package.sh  load_packages.C  make_par.sh  make_skeleton.sh  preamble.sh  set_field.sh  setup.csh.in  setup.sh.in  status.sh  svn_get_url.sh  test_cc.sh  test_ut.sh  unsetup.sh  update.sh
(+13 files in other folders)
